# autoclip-ai

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  architecture.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py
backend/app/pipeline/: chat.py  graph.py  orchestrator.py  state.py
backend/app/pipeline/agents/: audio_agent.py  classifier.py  clip_selector.py  fusion.py  production.py  text_agent.py  visual_agent.py
backend/app/routers/: chat.py  clips.py  music.py  pipeline.py  videos.py
backend/app/services/: analysis.py  caption_engine.py  music_service.py  scene_detector.py  thumbnail_gen.py  transcription.py  video_processor.py
backend/app/utils/: ffmpeg.py
backend/src/autoclip/: config.py  database.py  main.py  models.py  schemas.py
backend/src/autoclip/pipeline/: chat.py  graph.py  orchestrator.py  state.py  tools.py
backend/src/autoclip/pipeline/agents/: audio_agent.py  classifier.py  clip_selector.py  fusion.py  production.py  text_agent.py  visual_agent.py
backend/src/autoclip/routers/: chat.py  clips.py  music.py  pipeline.py  videos.py
backend/src/autoclip/services/: analysis.py  caption_engine.py  music_service.py  thumbnail_gen.py  transcription.py  video_processor.py
backend/src/autoclip/utils/: subtitle.py
backend/tests/: test_chat.py  test_e2e.py  test_fusion.py  test_graph.py  test_state.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  (+2 more)
(+25 files in other folders)
